@@ -4299,6 +4299,8 @@ struct session_settings
         bool lock_files;
 
         int ssl_listen;
+
+        int tracker_backoff;
 };
 </pre>
 <p><tt class="docutils literal"><span class="pre">version</span></tt> is automatically set to the libtorrent version you're using
@@ -5037,6 +5039,14 @@ no SSL listen port is opened. Otherwise a socket is opened on this port. This
 setting is only taken into account when opening the regular listen port, and
 won't re-open the listen socket simply by changing this setting.</p>
 <p>It defaults to port 4433.</p>
+<p><tt class="docutils literal"><span class="pre">tracker_backoff</span></tt> determines how aggressively to back off from retrying
+failing trackers. This value determines <em>x</em> in the following formula, determining
+the number of seconds to wait until the next retry:</p>
+<blockquote>
+delay = 5 + 5 * x / 100 * fails^2</blockquote>
+<p>It defaults to 250.</p>
+<p>This setting may be useful to make libtorrent more or less aggressive in hitting
+trackers.</p>
 </div>
 </div>
 <div class="section" id="pe-settings">
@@ -6248,7 +6258,7 @@ struct peer_disconnected_alert: peer_alert
 <div class="section" id="invalid-request-alert">
 <h2>invalid_request_alert</h2>
 <p>This is a debug alert that is generated by an incoming invalid piece request.
-<tt class="docutils literal"><span class="pre">Ïp</span></tt> is the address of the peer and the <tt class="docutils literal"><span class="pre">request</span></tt> is the actual incoming
+<tt class="docutils literal"><span class="pre">ìp</span></tt> is the address of the peer and the <tt class="docutils literal"><span class="pre">request</span></tt> is the actual incoming
 request from the peer.</p>
 <pre class="literal-block">
 struct invalid_request_alert: peer_alert
@@ -7835,13 +7845,13 @@ std::string error_code_to_string(boost::system::error_code const&amp; ec)
         static const char const* swedish[] =
         {
                 &quot;inget fel&quot;,
-                &quot;en fil i torrenten kolliderar med en fil frÂn en annan torrent&quot;,
+                &quot;en fil i torrenten kolliderar med en fil från en annan torrent&quot;,
                 &quot;hash check misslyckades&quot;,
-                &quot;torrent filen ‰r inte en dictionary&quot;,
-                &quot;'info'-nyckeln saknas eller ‰r korrupt i torrentfilen&quot;,
-                &quot;'info'-f‰ltet ‰r inte en dictionary&quot;,
-                &quot;'piece length' f‰ltet saknas eller ‰r korrupt i torrentfilen&quot;,
-                &quot;torrentfilen saknar namnf‰ltet&quot;,
+                &quot;torrent filen är inte en dictionary&quot;,
+                &quot;'info'-nyckeln saknas eller är korrupt i torrentfilen&quot;,
+                &quot;'info'-fältet är inte en dictionary&quot;,
+                &quot;'piece length' fältet saknas eller är korrupt i torrentfilen&quot;,
+                &quot;torrentfilen saknar namnfältet&quot;,
                 &quot;ogiltigt namn i torrentfilen (kan vara en attack)&quot;,
                 // ... more strings here
         };
